<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:app="http://schemas.android.com/apk/res-auto"
                                             xmlns:tools="http://schemas.android.com/tools"
                                             android:layout_width="match_parent"
                                             android:layout_height="match_parent">

    <TextView
            android:text="@string/feature_translations_title"
            android:textSize="@dimen/main_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/translationsTitle"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout"/>

    <LinearLayout android:layout_width="0dp"
                  app:layout_constraintWidth_percent="0.8"
                  android:layout_height="wrap_content"
                  app:layout_constraintTop_toTopOf="parent"
                  app:layout_constraintBottom_toBottomOf="parent"
                  app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
                  android:orientation="vertical"
                  android:layout_marginStart="8dp" android:id="@+id/linearLayout">
        <LinearLayout android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:orientation="horizontal"
        >
            <Spinner android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
                     android:entries="@array/languages_arr"
                     android:prompt="@string/translation_prompt"
                     android:id="@+id/fromLang"
            />
            <ImageView android:layout_width="0dp"
                       android:layout_height="wrap_content"
                       android:layout_weight="0.5"
                       android:src="@drawable/right_arrow_24dp"
            />
            <Spinner android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
                     android:entries="@array/languages_arr"
                     android:prompt="@string/translation_prompt"
                     android:id="@+id/toLang"
            />
        </LinearLayout>
        <TextView
                android:text="@string/data_translate"
                android:layout_width="wrap_content"
                android:layout_height="16dp"
                android:id="@+id/textView2" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp"
                app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toBottomOf="parent" android:layout_marginTop="8dp"/>
        <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:hint="Text"
                android:ems="10"
                android:id="@+id/textToTranslate"
                app:layout_constraintTop_toBottomOf="@+id/textView2" android:layout_marginStart="8dp"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="8dp"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginTop="8dp"/>

        <Button android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/textToTranslate"
                android:text="@string/translate_btn_text"
                android:id="@+id/sendTranslations"
        />

    </LinearLayout>

</android.support.constraint.ConstraintLayout>