<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:tools="http://schemas.android.com/tools"
                                             xmlns:app="http://schemas.android.com/apk/res-auto"
                                             android:layout_width="match_parent"
                                             android:layout_height="match_parent">


    <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:layout_editor_absoluteY="8dp"
            tools:layout_editor_absoluteX="8dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/searchMainContainer"
    >
        <TextView android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:textSize="24dp"
                  android:layout_gravity="center"
                  android:gravity="center"
                  android:text="Google Search"
        />
        <TextView
                android:text="@string/searchPrompt"
                android:layout_width="wrap_content"
                android:layout_height="16dp"
                android:layout_marginStart="8dp"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp"/>
        <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:hint="Text"
                android:ems="10"
                android:id="@+id/searchText"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginTop="8dp"/>
        <LinearLayout android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:orientation="horizontal"
        >
            <Button android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/search_btn_text"
                    android:id="@+id/sendSearchButton"
                    android:layout_weight="1"
                    android:layout_margin="8dp"
            />

            <Button android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/search_web_page_btn_text"
                    android:id="@+id/saveWebPageButton"
                    android:layout_weight="1"
                    android:layout_margin="8dp"
            />
        </LinearLayout>


    </LinearLayout>
</android.support.constraint.ConstraintLayout>