<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:app="http://schemas.android.com/apk/res-auto"
                                             xmlns:tools="http://schemas.android.com/tools"
                                             android:layout_width="match_parent"
                                             android:layout_height="match_parent">



    <LinearLayout android:layout_width="0dp"
                  app:layout_constraintWidth_percent="0.8"
                  android:layout_height="wrap_content"
                  app:layout_constraintTop_toTopOf="parent"
                  app:layout_constraintBottom_toBottomOf="parent"
                  app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
                  android:orientation="vertical"
                  android:layout_marginStart="8dp" android:id="@+id/linearLayout">

        <TextView
                android:text="@string/feature_directions_title"
                android:textSize="@dimen/main_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_gravity="center"
                android:id="@+id/translationsTitle"/>
                <!--app:layout_constraintStart_toStartOf="parent"-->
                <!--android:layout_marginStart="8dp"-->
                <!--android:layout_marginEnd="8dp"-->
                <!--app:layout_constraintEnd_toEndOf="parent"-->
                <!--android:layout_marginBottom="8dp"-->
                <!--app:layout_constraintBottom_toTopOf="@+id/modesTray"/>-->

        <LinearLayout android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:gravity="center"
                      android:orientation="horizontal"
                      app:layout_constraintTop_toTopOf="parent"
                      app:layout_constraintBottom_toBottomOf="parent"
                      app:layout_constraintTop_toBottomOf="@+id/translationsTitle"
                      app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
                      app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
                      android:padding="8dp"
                      android:id="@+id/modesTray"
        >

            <ImageView android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:src="@drawable/car_selected_24dp"
                       android:padding="8dp"
                       android:id="@+id/carButton"
            />
            <ImageView android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:src="@drawable/bus_24dp"
                       android:padding="8dp"
                       android:id="@+id/busButton"
            />
            <ImageView android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:src="@drawable/walk_24dp"
                       android:padding="8dp"
                       android:id="@+id/walkButton"
            />

        </LinearLayout>
        <TextView
                android:text="@string/fromDir"
                android:layout_width="wrap_content"
                android:layout_height="16dp"
                android:id="@+id/fromDirectionsText"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp"
                app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toBottomOf="parent" android:layout_marginTop="8dp"/>
        <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:hint="Text"
                android:ems="10"
                android:id="@+id/fromDirections"
                app:layout_constraintTop_toBottomOf="@+id/fromDirectionsText" android:layout_marginStart="8dp"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="8dp"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginTop="8dp"/>
        <TextView
                android:text="@string/toDir"
                android:layout_width="wrap_content"
                android:layout_height="16dp"
                android:id="@+id/toDirectionsText"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp"
                app:layout_constraintTop_toBottomOf="@id/fromDirections" android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toBottomOf="parent" android:layout_marginTop="8dp"/>
        <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:hint="Text"
                android:ems="10"
                android:id="@+id/toDirections"
                app:layout_constraintTop_toBottomOf="@+id/toDirectionsText"
                android:layout_marginStart="8dp"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginEnd="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="8dp"/>
        <Button android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/toDirections"
                android:text="@string/directions_btn_text"
                android:id="@+id/sendDirections"
        />

    </LinearLayout>

</android.support.constraint.ConstraintLayout>